[package]
name = "typr-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
crossterm = "0.27"
ratatui = "0.26"
anyhow = "1.0"
directories = "5.0" # Good practice for saving userdata correctly
